attempt to fix issue with chart not showing properly on TAs browser

--- a/css/style.css
+++ b/css/style.css
@@ -47,8 +47,7 @@ section {
 canvas{
   border: 5px solid darkgreen;
   background-color: lightgray;
-  width: 100%;
-  height: 1px;
+  height: 300px;
 }
 
 section div {
